# ml-training-template

./: .gitignore  README.md  benchmark.py  best.pt  config.yaml  dataset.py  main.py  model.py  profile_train.py  pyproject.toml  sweep.yaml  trace_optimized.json  train.py  utils.py
data/: aapl_ge_psct.parquet
