[project]
name = "ml-training-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pandas-datareader>=0.10.0",
    "pyarrow>=24.0.0",
    "pyyaml>=6.0.3",
    "torch>=2.12.0",
    "wandb>=0.27.2",
    "yfinance>=1.4.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]  
